[composer] Fix circular dependencies
Composer install fail when a circular dependency with root package is installed via require-dev

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,8 @@
         "ext-wincache": "WinCache, to use the WinCache storage adapter",
         "mongofill/mongofill": "Alternative to ext-mongo - a pure PHP implementation designed as a drop in replacement"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "branch-alias": {
             "dev-master": "2.4-dev",
