--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,25 @@ sudo: false
 
 language: php
 
+env:
+  global:
+    - TESTS_ZEND_CACHE_APC_ENABLED=true
+    - TESTS_ZEND_CACHE_XCACHE_ENABLED=true
+    - TESTS_ZEND_CACHE_PLATFORM_ENABLED=true
+    - TESTS_ZEND_CACHE_WINCACHE_ENABLED=true
+    - TESTS_ZEND_CACHE_ZEND_SERVER_ENABLED=true
+    - TESTS_ZEND_CACHE_MEMCACHED_ENABLED=true
+    - TESTS_ZEND_CACHE_MEMCACHED_HOST='127.0.0.1'
+    - TESTS_ZEND_CACHE_MEMCACHED_PORT=11211
+    - TESTS_ZEND_CACHE_MEMCACHE_ENABLED=true
+    - TESTS_ZEND_CACHE_MEMCACHE_HOST=TESTS_ZEND_CACHE_MEMCACHED_HOST
+    - TESTS_ZEND_CACHE_MEMCACHE_PORT=TESTS_ZEND_CACHE_MEMCACHED_PORT
+    - TESTS_ZEND_CACHE_REDIS_ENABLED=true
+    - TESTS_ZEND_CACHE_REDIS_HOST='127.0.0.1'
+    - TESTS_ZEND_CACHE_REDIS_PORT=6379
+    - TESTS_ZEND_CACHE_REDIS_PASSWORD=''
+    - TESTS_ZEND_CACHE_REDIS_DATABASE=0
+
 matrix:
   fast_finish: true
   include:
@@ -27,8 +46,8 @@ install:
   - travis_retry composer install --no-interaction --ignore-platform-reqs
 
 script:
-  - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then ./vendor/bin/phpunit -c phpunit.xml.travis --coverage-clover clover.xml ; fi
-  - if [[ $EXECUTE_TEST_COVERALLS != 'true' ]]; then ./vendor/bin/phpunit -c phpunit.xml.travis ; fi
+  - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then ./vendor/bin/phpunit --coverage-clover clover.xml ; fi
+  - if [[ $EXECUTE_TEST_COVERALLS != 'true' ]]; then ./vendor/bin/phpunit ; fi
   - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then ./vendor/bin/php-cs-fixer fix -v --diff --dry-run ; fi
 
 after_script:
