--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ sudo: false
 
 language: php
 
+cache:
+  directories:
+    - $HOME/.composer/cache
+
+cache:
+  directories:
+    - $HOME/.composer/cache
+
 env:
   global:
     - TESTS_ZEND_CACHE_APC_ENABLED=true
