--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "zendframework/zend-eventmanager": "~2.5"
     },
     "require-dev": {
+        "zendframework/zend-serializer": "~2.5", 
         "zendframework/zend-session": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
