--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "zendframework/zend-eventmanager": "dev-develop as 2.7.0"
     },
     "require-dev": {
-        "zendframework/zend-serializer": "~2.5",
+        "zendframework/zend-serializer": "dev-develop as 2.6.0",
         "zendframework/zend-session": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
