--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ services:
 env:
   global:
     - TESTS_ZEND_CACHE_APC_ENABLED: true
+    - TESTS_ZEND_CACHE_APCU_ENABLED=true
     - TESTS_ZEND_CACHE_MEMCACHED_ENABLED: true
     - TESTS_ZEND_CACHE_MEMCACHED_HOST: "127.0.0.1"
     - TESTS_ZEND_CACHE_MEMCACHED_PORT: 11211
@@ -72,6 +73,7 @@ matrix:
         - INSTALL_XCACHE=true
     - php: 7
       env:
+        - EXECUTE_TEST_COVERALLS=true
         - PECL_INSTALL_APCU='apcu'
         - PECL_INSTALL_APCU_BC='apcu_bc-beta'
     - php: 7
