--- a/.travis.yml
+++ b/.travis.yml
@@ -18,19 +18,19 @@ services:
 
 env:
   global:
-    - TESTS_ZEND_CACHE_APC_ENABLED=true
-    - TESTS_ZEND_CACHE_MEMCACHED_ENABLED=true
-    - TESTS_ZEND_CACHE_MEMCACHED_HOST='127.0.0.1'
-    - TESTS_ZEND_CACHE_MEMCACHED_PORT=11211
-    - TESTS_ZEND_CACHE_MEMCACHE_ENABLED=true
-    - TESTS_ZEND_CACHE_MEMCACHE_HOST=$TESTS_ZEND_CACHE_MEMCACHED_HOST
-    - TESTS_ZEND_CACHE_MEMCACHE_PORT=$TESTS_ZEND_CACHE_MEMCACHED_PORT
-    - TESTS_ZEND_CACHE_MONGODB_ENABLED=true
-    - TESTS_ZEND_CACHE_REDIS_ENABLED=true
-    - TESTS_ZEND_CACHE_REDIS_HOST='127.0.0.1'
-    - TESTS_ZEND_CACHE_REDIS_PORT=6379
-    - TESTS_ZEND_CACHE_REDIS_PASSWORD=''
-    - TESTS_ZEND_CACHE_REDIS_DATABASE=0
+    - TESTS_ZEND_CACHE_APC_ENABLED: true
+    - TESTS_ZEND_CACHE_MEMCACHED_ENABLED: true
+    - TESTS_ZEND_CACHE_MEMCACHED_HOST: "127.0.0.1"
+    - TESTS_ZEND_CACHE_MEMCACHED_PORT: 11211
+    - TESTS_ZEND_CACHE_MEMCACHE_ENABLED: true
+    - TESTS_ZEND_CACHE_MEMCACHE_HOST: $TESTS_ZEND_CACHE_MEMCACHED_HOST
+    - TESTS_ZEND_CACHE_MEMCACHE_PORT: $TESTS_ZEND_CACHE_MEMCACHED_PORT
+    - TESTS_ZEND_CACHE_MONGODB_ENABLED: true
+    - TESTS_ZEND_CACHE_REDIS_ENABLED: true
+    - TESTS_ZEND_CACHE_REDIS_HOST: "127.0.0.1"
+    - TESTS_ZEND_CACHE_REDIS_PORT: 6379
+    - TESTS_ZEND_CACHE_REDIS_PASSWORD: ""
+    - TESTS_ZEND_CACHE_REDIS_DATABASE: 0
 
 matrix:
   fast_finish: true
@@ -42,6 +42,7 @@ matrix:
     - php: 5.5
       env:
         - SERVICE_MANAGER_VERSION="^2.7.5"
+        - EVENT_MANAGER_VERSION="^2.6.2"
         - PECL_INSTALL_APCU='apcu-4.0.8'
     - php: 5.6
       env:
@@ -50,6 +51,7 @@ matrix:
     - php: 5.6
       env:
         - SERVICE_MANAGER_VERSION="^2.7.5"
+        - EVENT_MANAGER_VERSION="^2.6.2"
         - PECL_INSTALL_APCU='apcu-4.0.8'
     - php: 7
       env:
@@ -58,12 +60,14 @@ matrix:
     - php: 7
       env:
         - SERVICE_MANAGER_VERSION="^2.7.5"
+        - EVENT_MANAGER_VERSION="^2.6.2"
         - PECL_INSTALL_APCU='apcu'
         - PECL_INSTALL_APCU_BC='apcu_bc-beta'
     - php: hhvm
     - php: hhvm
       env:
         - SERVICE_MANAGER_VERSION="^2.7.5"
+        - EVENT_MANAGER_VERSION="^2.6.2"
   allow_failures:
     - php: 7
     - php: hhvm
@@ -76,8 +80,11 @@ before_install:
   - if [[ $EXECUTE_TEST_COVERALLS != 'true' ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
   - composer self-update
   - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then composer require --dev --no-update satooshi/php-coveralls ; fi
-  - if [[ $SERVICE_MANAGER_VERSION != '' ]]; then composer require --dev --no-update "zendframework/zend-servicemanager:$SERVICE_MANAGER_VERSION" ; fi
-  - if [[ $SERVICE_MANAGER_VERSION == '' ]]; then composer require --dev --no-update "zendframework/zend-servicemanager:^3.0" ; fi
+  - if [[ $SERVICE_MANAGER_VERSION != '' ]]; then composer require --no-update "zendframework/zend-servicemanager:$SERVICE_MANAGER_VERSION" ; fi
+  - if [[ $SERVICE_MANAGER_VERSION == '' ]]; then composer require --no-update "zendframework/zend-servicemanager:^3.0.3" ; fi
+  - if [[ $SERVICE_MANAGER_VERSION == '' ]]; then composer remove --dev --no-update zendframework/zend-session ; fi
+  - if [[ $EVENT_MANAGER_VERSION != '' ]]; then composer require --no-update "zendframework/zend-eventmanager:$EVENT_MANAGER_VERSION" ; fi
+  - if [[ $EVENT_MANAGER_VERSION == '' ]]; then composer require --no-update "zendframework/zend-eventmanager:^3.0" ; fi
 
 install:
   - travis_retry composer install --no-interaction --ignore-platform-reqs
