--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-stdlib": "~2.7",
-        "zendframework/zend-servicemanager": "^2.7.5 || ^3.0",
+        "php": "^5.5 || ^7.0",
+        "zendframework/zend-stdlib": "^2.7 || ^3.0",
+        "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
         "zendframework/zend-eventmanager": "^2.6.2 || ^3.0"
     },
     "require-dev": {
-        "zendframework/zend-serializer": "^2.6.0",
-        "zendframework/zend-session": "dev-develop as 2.6.0",
+        "zendframework/zend-serializer": "^2.6",
+        "zendframework/zend-session": "^2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
@@ -42,7 +42,7 @@
     "extra": {
         "branch-alias": {
             "dev-master": "2.5-dev",
-            "dev-develop": "3.0-dev"
+            "dev-develop": "2.6-dev"
         }
     },
     "autoload-dev": {
