--- a/.travis.yml
+++ b/.travis.yml
@@ -66,12 +66,22 @@ matrix:
       env:
         - PECL_INSTALL_APCU='apcu'
         - PECL_INSTALL_APCU_BC='apcu_bc-beta'
+
+        # FIXME:
+        # there is no memcached extension available for PHP-7
+        # the version provided by travis is not yet ready and buggy
+        - TESTS_ZEND_CACHE_MEMCACHED_ENABLED=false
     - php: 7
       env:
         - SERVICE_MANAGER_VERSION="^2.7.5"
         - EVENT_MANAGER_VERSION="^2.6.2"
         - PECL_INSTALL_APCU='apcu'
         - PECL_INSTALL_APCU_BC='apcu_bc-beta'
+
+        # FIXME:
+        # there is no memcached extension available for PHP-7
+        # the version provided by travis is not yet ready and buggy
+        - TESTS_ZEND_CACHE_MEMCACHED_ENABLED=false
     - php: hhvm
     - php: hhvm
       env:
