Travis: use tmpfs for filesystem adapter

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ services:
 env:
   global:
     - TESTS_ZEND_CACHE_APC_ENABLED: true
+    - TESTS_ZEND_CACHE_FILESYSTEM_DIR: /dev/shm
     - TESTS_ZEND_CACHE_MEMCACHED_ENABLED: true
     - TESTS_ZEND_CACHE_MEMCACHED_HOST: "127.0.0.1"
     - TESTS_ZEND_CACHE_MEMCACHED_PORT: 11211
