--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "zendframework/zend-serializer": "^2.6",
         "zendframework/zend-session": "^2.6.2",
         "fabpot/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "~4.0"
+        "phpunit/phpunit": "^4.5"
     },
     "suggest": {
         "zendframework/zend-serializer": "Zend\\Serializer component",
