Expose package as a config-provider / ZF component
Added:

- `ConfigProvider`, which enables the
  `StorageCacheAbstractServiceFactory` by default, as well as maps new
  entries for the `PatternPluginManager`, storage `PluginManager`, and
  storage `AdapterPluginManager`.
- `Module`, which does the same as the above, but in a zend-mvc context.

--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,10 @@
         "branch-alias": {
             "dev-master": "2.6-dev",
             "dev-develop": "2.7-dev"
+        },
+        "zf": {
+            "component": "Zend\\Cache",
+            "config-provider": "Zend\\Cache\\ConfigProvider"
         }
     },
     "autoload-dev": {
