--- a/.travis.yml
+++ b/.travis.yml
@@ -121,8 +121,8 @@ notifications:
   email: false
 
 before_install:
-  - travis_retry composer self-update
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" && $TEST_COVERAGE != 'true' ]]; then phpenv config-rm xdebug.ini ; fi
+  - travis_retry composer self-update
 
 install:
   # prevent PECL from enabling the extension by default, see https://pear.php.net/bugs/bug.php?id=21007
@@ -132,12 +132,8 @@ install:
     fi
 
   - if [[ $INSTALL_APCU_BC == 'true' ]]; then
-        git clone https://github.com/krakjoe/apcu-bc.git
-        && (
-            cd apcu-bc
-            && git checkout $(git rev-list --tags --max-count=1)
-            && phpize && ./configure && make && make install
-        );
+        pecl install apcu_bc-beta
+        && sed -i 's/extension="apc.so"//' ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ;
     fi
 
   - if [[ $TESTS_ZEND_CACHE_XCACHE_ENABLED == 'true' ]]; then
