--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,6 @@ env:
     - TESTS_ZEND_CACHE_XCACHE_ADMIN_AUTH=true
     - TESTS_ZEND_CACHE_XCACHE_ADMIN_USER=travis
     - TESTS_ZEND_CACHE_XCACHE_ADMIN_PASS=test
-    - APCU_PECL_VERSION="apcu"
     - SITE_URL="https://zendframework.github.io/zend-cache"
     - GH_USER_NAME="Matthew Weier O'Phinney"
     - GH_USER_EMAIL="matthew@weierophinney.net"
@@ -52,12 +51,12 @@ matrix:
     - php: 5.6
       env:
         - DEPS=lowest
-        - APCU_PECL_VERSION="apcu-4.0.11"
+        - APCU_PECL_VERSION="apcu-4.0.8"
     - php: 5.6
       env:
         - DEPS=locked
         - TEST_COVERAGE=true
-        - APCU_PECL_VERSION="apcu-4.0.11"
+        - APCU_PECL_VERSION="apcu-4.0.10"
         - DEPLOY_DOCS="$(if [[ $TRAVIS_BRANCH == 'master' && $TRAVIS_PULL_REQUEST == 'false' ]]; then echo -n 'true' ; else echo -n 'false' ; fi)"
         - PATH="$HOME/.local/bin:$PATH"
     - php: 5.6
@@ -67,6 +66,8 @@ matrix:
     - php: 7
       env:
         - DEPS=lowest
+        - APCU_PECL_VERSION="apcu-5.1.2"
+        - APCU_BC_PECL_VERSION="apcu_bc-1.0.0"
         - INSTALL_APCU_BC=true
 
         # TODO:
@@ -79,6 +80,8 @@ matrix:
       env:
         - DEPS=locked
         - CHECK_CS=true
+        - APCU_PECL_VERSION="apcu-5.1.3"
+        - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
         - INSTALL_APCU_BC=true
 
         # TODO:
@@ -90,6 +93,8 @@ matrix:
     - php: 7
       env:
         - DEPS=latest
+        - APCU_PECL_VERSION="apcu"            # PECL will download the latest stable version available
+        - APCU_BC_PECL_VERSION="apcu_bc-beta" # TODO: change this as soon there is a stable version available
         - INSTALL_APCU_BC=true
 
         # TODO:
@@ -132,7 +137,7 @@ install:
     fi
 
   - if [[ $INSTALL_APCU_BC == 'true' ]]; then
-        pecl install apcu_bc-beta
+        pecl install $APCU_BC_PECL_VERSION
         && sed -i 's/extension="apc.so"//' ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ;
     fi
 
