--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,18 @@ env:
 matrix:
   fast_finish: true
   include:
+    - php: 5.5
+      env:
+        - DEPS=lowest
+        - APCU_PECL_VERSION="apcu-4.0.8"
+    - php: 5.5
+      env:
+        - DEPS=locked
+        - APCU_PECL_VERSION="apcu-4.0.10"
+    - php: 5.5
+      env:
+        - DEPS=latest
+        - APCU_PECL_VERSION="apcu-4.0.11"
     - php: 5.6
       env:
         - DEPS=lowest
