--- a/composer.json
+++ b/composer.json
@@ -62,10 +62,10 @@
             "@cs-check",
             "@test"
         ],
-        "upload-coverage": "coveralls -v",
-        "cs-check": "php-cs-fixer --version && php-cs-fixer fix -v --diff --dry-run",
-        "cs-fix": "php-cs-fixer fix -v",
+        "cs-check": "phpcs",
+        "cs-fix": "phpcbf",
         "test": "phpunit --colors=always",
-        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
+        "upload-coverage": "coveralls -v"
     }
 }
