--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,6 @@ sudo: false
 
 language: php
 
-branches:
-  except:
-    - /^release-.*$/
-    - /^ghgfk-.*$/
-
 cache:
   directories:
     - $HOME/.composer/cache
@@ -20,7 +15,6 @@ env:
   global:
     - COMPOSER_ARGS="--no-interaction"
     - COVERAGE_DEPS="php-coveralls/php-coveralls"
-    - LEGACY_DEPS="phpunit/phpunit"
     - TESTS_ZEND_CACHE_APC_ENABLED=true
     - TESTS_ZEND_CACHE_APCU_ENABLED=true
     - TESTS_ZEND_CACHE_FILESYSTEM_DIR=/dev/shm
@@ -50,70 +44,60 @@ matrix:
     - php: 5.6
       env:
         - DEPS=locked
+        - LEGACY_DEPS="phpunit/phpunit"
         - APCU_PECL_VERSION="apcu-4.0.10"
     - php: 5.6
       env:
         - DEPS=latest
-        - TEST_COVERAGE=true
         - APCU_PECL_VERSION="apcu-4.0.11"
     - php: 7
       env:
         - DEPS=lowest
         - APCU_PECL_VERSION="apcu-5.1.2"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.0"
-
-        # TODO: re-enable these extensions as soon as they are available and stable on php 7
-        - TESTS_ZEND_CACHE_MEMCACHE_ENABLED=false
-        - TESTS_ZEND_CACHE_MEMCACHED_ENABLED=false
-        - TESTS_ZEND_CACHE_MONGODB_ENABLED=false
-        - TESTS_ZEND_CACHE_XCACHE_ENABLED=false
     - php: 7
       env:
         - DEPS=locked
-        - CHECK_CS=true
+        - LEGACY_DEPS="phpunit/phpunit"
         - APCU_PECL_VERSION="apcu-5.1.3"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
-
-        # TODO: re-enable these extensions as soon as they are available and stable on php 7
-        - TESTS_ZEND_CACHE_MEMCACHE_ENABLED=false
-        - TESTS_ZEND_CACHE_MEMCACHED_ENABLED=false
-        - TESTS_ZEND_CACHE_MONGODB_ENABLED=false
-        - TESTS_ZEND_CACHE_XCACHE_ENABLED=false
     - php: 7
       env:
         - DEPS=latest
-        - APCU_PECL_VERSION="apcu"            # PECL will download the latest stable version available
-        - APCU_BC_PECL_VERSION="apcu_bc-beta" # TODO: change this as soon there is a stable version available
-
-        # TODO: re-enable these extensions as soon as they are available and stable on php 7
-        - TESTS_ZEND_CACHE_MEMCACHE_ENABLED=false
-        - TESTS_ZEND_CACHE_MEMCACHED_ENABLED=false
-        - TESTS_ZEND_CACHE_MONGODB_ENABLED=false
-        - TESTS_ZEND_CACHE_XCACHE_ENABLED=false
-    - php: hhvm
+        - APCU_PECL_VERSION="apcu"
+        - APCU_BC_PECL_VERSION="apcu_bc-1.0.3"
+    - php: 7.1
       env:
         - DEPS=lowest
-        - TESTS_ZEND_CACHE_XCACHE_ENABLED=false
-        - TESTS_ZEND_CACHE_APCU_ENABLED=false
-    - php: hhvm
+        - APCU_PECL_VERSION="apcu-5.1.2"
+        - APCU_BC_PECL_VERSION="apcu_bc-1.0.0"
+    - php: 7.1
       env:
         - DEPS=locked
-        - TESTS_ZEND_CACHE_XCACHE_ENABLED=false
-        - TESTS_ZEND_CACHE_APCU_ENABLED=false
-    - php: hhvm
+        - CS_CHECK=true
+        - TEST_COVERAGE=true
+        - APCU_PECL_VERSION="apcu-5.1.3"
+        - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
+    - php: 7.1
       env:
         - DEPS=latest
-        - TESTS_ZEND_CACHE_XCACHE_ENABLED=false
+        - APCU_PECL_VERSION="apcu"
+        - APCU_BC_PECL_VERSION="apcu_bc-1.0.3"
+    - php: 7.2
+      env:
+        - DEPS=lowest
         - TESTS_ZEND_CACHE_APCU_ENABLED=false
-  allow_failures:
-    - php: hhvm
-
-notifications:
-  irc: "irc.freenode.org#zftalk.dev"
-  email: false
+    - php: 7.2
+      env:
+        - DEPS=locked
+        - TESTS_ZEND_CACHE_APCU_ENABLED=false
+    - php: 7.2
+      env:
+        - DEPS=latest
+        - TESTS_ZEND_CACHE_APCU_ENABLED=false
 
 before_install:
-  - if [[ $TRAVIS_PHP_VERSION != "hhvm" && $TEST_COVERAGE != 'true' ]]; then phpenv config-rm xdebug.ini ; fi
+  - if [[ $TEST_COVERAGE != 'true' ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
 
 install:
   # prevent PECL from enabling the extension by default, see https://pear.php.net/bugs/bug.php?id=21007
@@ -136,40 +120,41 @@ install:
         );
     fi
 
-  - travis_retry composer install $COMPOSER_ARGS
-  - if [[ $TRAVIS_PHP_VERSION =~ ^5.6 ]]; then travis_retry composer update $COMPOSER_ARGS --with-dependencies $LEGACY_DEPS ; fi
+  - travis_retry composer install $COMPOSER_ARGS --ignore-platform-reqs
+  - if [[ $LEGACY_DEPS != '' ]]; then travis_retry composer update $COMPOSER_ARGS --with-dependencies $LEGACY_DEPS ; fi
   - if [[ $DEPS == 'latest' ]]; then travis_retry composer update $COMPOSER_ARGS ; fi
   - if [[ $DEPS == 'lowest' ]]; then travis_retry composer update --prefer-lowest --prefer-stable $COMPOSER_ARGS ; fi
   - if [[ $TEST_COVERAGE == 'true' ]]; then travis_retry composer require --dev $COMPOSER_ARGS $COVERAGE_DEPS ; fi
-  - composer show
+  - stty cols 120 && composer show
 
 before_script:
-  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]]; then
-        if [[ $APCU_PECL_VERSION != '' && $APCU_BC_PECL_VERSION == '' ]]; then
-            phpenv config-add .ci/apcu.ini ;
-        elif [[ $APCU_BC_PECL_VERSION != '' ]]; then
-            phpenv config-add .ci/apcu_bc.ini ;
-        fi ;
-        if [[ $TESTS_ZEND_CACHE_REDIS_ENABLED == 'true' ]]; then
-            phpenv config-add .ci/redis.ini ;
-        fi ;
-        if [[ $TESTS_ZEND_CACHE_MEMCACHE_ENABLED == 'true' ]]; then
-            phpenv config-add .ci/memcache.ini ;
-        fi ;
-        if [[ $TESTS_ZEND_CACHE_MEMCACHED_ENABLED == 'true' ]]; then
-            phpenv config-add .ci/memcached.ini ;
-        fi ;
-        if [[ $TESTS_ZEND_CACHE_MONGODB_ENABLED == 'true' ]]; then
-            phpenv config-add .ci/mongo.ini ;
-        fi ;
-        if [[ $TESTS_ZEND_CACHE_XCACHE_ENABLED == 'true' ]]; then
-            phpenv config-add .ci/xcache.ini ;
-        fi ;
-    fi
+  - if [[ $APCU_PECL_VERSION != '' && $APCU_BC_PECL_VERSION == '' ]]; then
+        phpenv config-add .ci/apcu.ini ;
+    elif [[ $APCU_BC_PECL_VERSION != '' ]]; then
+        phpenv config-add .ci/apcu_bc.ini ;
+    fi ;
+    if [[ $TESTS_ZEND_CACHE_REDIS_ENABLED == 'true' ]]; then
+        phpenv config-add .ci/redis.ini ;
+    fi ;
+    if [[ $TESTS_ZEND_CACHE_MEMCACHE_ENABLED == 'true' ]]; then
+        phpenv config-add .ci/memcache.ini ;
+    fi ;
+    if [[ $TESTS_ZEND_CACHE_MEMCACHED_ENABLED == 'true' ]]; then
+        phpenv config-add .ci/memcached.ini ;
+    fi ;
+    if [[ $TESTS_ZEND_CACHE_MONGODB_ENABLED == 'true' ]]; then
+        phpenv config-add .ci/mongo.ini ;
+    fi ;
+    if [[ $TESTS_ZEND_CACHE_XCACHE_ENABLED == 'true' ]]; then
+        phpenv config-add .ci/xcache.ini ;
+    fi ;
 
 script:
   - if [[ $TEST_COVERAGE == 'true' ]]; then composer run-script test-coverage --timeout=400 -- --verbose ; else composer run-script test --timeout=300 -- --verbose ; fi
-  - if [[ $CHECK_CS == 'true' ]]; then composer cs-check ; fi
+  - if [[ $CS_CHECK == 'true' ]]; then composer cs-check ; fi
 
 after_script:
   - if [[ $TEST_COVERAGE == 'true' ]]; then travis_retry vendor/bin/php-coveralls -v ; fi
+
+notifications:
+  email: false
