--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "psr/cache": "^1.0",
-        "zendframework/zend-eventmanager": "^2.6.2 || ^3.0",
-        "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
-        "zendframework/zend-stdlib": "^2.7 || ^3.0"
+        "zendframework/zend-eventmanager": "^2.6.3 || ^3.2",
+        "zendframework/zend-servicemanager": "^2.7.8 || ^3.3",
+        "zendframework/zend-stdlib": "^2.7.7 || ^3.1"
     },
     "require-dev": {
         "cache/integration-tests": "^0.10.0",
@@ -45,6 +45,9 @@
         "mongofill/mongofill": "Alternative to ext-mongo - a pure PHP implementation designed as a drop in replacement"
     },
     "autoload": {
+        "files": [
+            "autoload/patternPluginManagerPolyfill.php"
+        ],
         "psr-4": {
             "Zend\\Cache\\": "src/"
         }
