--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,34 @@
 {
     "name": "zendframework/zend-cache",
-    "description": "provides a generic way to cache any data",
+    "description": "Caching implementation with a variety of storage options, as well as codified caching strategies for callbacks, classes, and output",
     "license": "BSD-3-Clause",
     "keywords": [
-        "zf2",
+        "zendframework",
+        "zf",
         "cache"
     ],
-    "homepage": "https://github.com/zendframework/zend-cache",
-    "autoload": {
-        "psr-4": {
-            "Zend\\Cache\\": "src/"
-        }
+    "support": {
+        "docs": "https://docs.zendframework.com/zend-cache/",
+        "issues": "https://github.com/zendframework/zend-cache/issues",
+        "source": "https://github.com/zendframework/zend-cache",
+        "rss": "https://github.com/zendframework/zend-cache/releases.atom",
+        "chat": "https://zendframework-slack.herokuapp.com",
+        "forum": "https://discourse.zendframework.com/c/questions/components"
     },
     "require": {
         "php": "^5.6 || ^7.0",
-        "zendframework/zend-stdlib": "^2.7 || ^3.0",
-        "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
+        "psr/cache": "^1.0",
         "zendframework/zend-eventmanager": "^2.6.2 || ^3.0",
-        "psr/cache": "^1.0"
+        "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
+        "zendframework/zend-stdlib": "^2.7 || ^3.0"
     },
     "require-dev": {
-        "zendframework/zend-serializer": "^2.6",
-        "zendframework/zend-session": "^2.6.2",
         "cache/integration-tests": "^0.10.0",
-        "phpunit/phpunit": "^5.7.15 || ^6.0.8",
         "phpbench/phpbench": "^0.10.0",
-        "zendframework/zend-coding-standard": "~1.0.0"
+        "phpunit/phpunit": "^5.7.15 || ^6.0.8",
+        "zendframework/zend-coding-standard": "~1.0.0",
+        "zendframework/zend-serializer": "^2.6",
+        "zendframework/zend-session": "^2.6.2"
     },
     "suggest": {
         "zendframework/zend-serializer": "Zend\\Serializer component",
@@ -41,16 +44,9 @@
         "ext-xcache": "XCache, to use the XCache storage adapter",
         "mongofill/mongofill": "Alternative to ext-mongo - a pure PHP implementation designed as a drop in replacement"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.7-dev",
-            "dev-develop": "2.8-dev"
-        },
-        "zf": {
-            "component": "Zend\\Cache",
-            "config-provider": "Zend\\Cache\\ConfigProvider"
+    "autoload": {
+        "psr-4": {
+            "Zend\\Cache\\": "src/"
         }
     },
     "autoload-dev": {
@@ -62,6 +58,19 @@
             "test/_autoload.php"
         ]
     },
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.7.x-dev",
+            "dev-develop": "2.8.x-dev"
+        },
+        "zf": {
+            "component": "Zend\\Cache",
+            "config-provider": "Zend\\Cache\\ConfigProvider"
+        }
+    },
     "scripts": {
         "check": [
             "@cs-check",
@@ -70,7 +79,6 @@
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
         "test": "phpunit --colors=always",
-        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
-        "upload-coverage": "coveralls -v"
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     }
 }
