--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ pages:
         - OutputCache: pattern/output-cache.md
         - CaptureCache: pattern/capture-cache.md
     - PSR-6: psr6.md
+    - PSR-16: psr16.md
 site_name: zend-cache
 site_description: Zend\Cache
 repo_url: 'https://github.com/zendframework/zend-cache'
