add "psr-6" and "psr-16" to composer.json keywords

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "keywords": [
         "zendframework",
         "zf",
-        "cache"
+        "cache",
+        "psr-6",
+        "psr-16"
     ],
     "support": {
         "docs": "https://docs.zendframework.com/zend-cache/",
