--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 docs_dir: docs/book
 site_dir: docs/html
 pages:
-    - index.md
+    - Home: index.md
     - Storage:
         - Adapters: storage/adapter.md
         - Capabilities: storage/capabilities.md
@@ -17,6 +17,5 @@ pages:
         - PSR-6: psr6.md
         - PSR-16: psr16.md
 site_name: zend-cache
-site_description: Zend\Cache
+site_description: 'Caching implementation with a variety of storage options, as well as codified caching strategies for callbacks, classes, and output.'
 repo_url: 'https://github.com/zendframework/zend-cache'
-copyright: 'Copyright (c) 2005-2018 <a href="https://www.zend.com/">Zend Technologies USA Inc.</a>'
