Set version constraint for replaced repository in composer.json
Signed-off-by: Michał Bundyra <contact@webimpress.com>

--- a/composer.json
+++ b/composer.json
@@ -96,6 +96,6 @@
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
     "replace": {
-        "zendframework/zend-cache": "self.version"
+        "zendframework/zend-cache": "^2.9.0"
     }
 }
