Switch to `laminas/laminas-cache-storage-adapter-apc`
Signed-off-by: Maximilian Bösing <2189546+boesing@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ env:
     - COMPOSER_ARGS="--no-interaction"
     - COVERAGE_DEPS="php-coveralls/php-coveralls"
     - EXTMONGODB_DEPS="mongodb/mongodb"
-    - TESTS_LAMINAS_CACHE_APC_ENABLED=true
     - TESTS_LAMINAS_CACHE_APCU_ENABLED=true
     - TESTS_LAMINAS_CACHE_FILESYSTEM_DIR=/dev/shm
     - TESTS_LAMINAS_CACHE_MEMCACHED_ENABLED=true
@@ -63,7 +62,6 @@ matrix:
       env:
         - DEPS=lowest
         - APCU_PECL_VERSION="apcu-5.1.2"
-        - APCU_BC_PECL_VERSION="apcu_bc-1.0.0"
         - REDIS_PECL_VERSION="redis-4.0.0"
         - TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL=true
         - TESTS_LAMINAS_CACHE_EXTMONGODB_ENABLED=false
@@ -71,7 +69,6 @@ matrix:
       env:
         - DEPS=latest
         - APCU_PECL_VERSION="apcu"
-        - APCU_BC_PECL_VERSION="apcu_bc"
         - REDIS_PECL_VERSION="redis"
         - TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL=true
         - TESTS_LAMINAS_CACHE_EXTMONGODB_ENABLED=false
@@ -79,7 +76,6 @@ matrix:
       env:
         - DEPS=lowest
         - APCU_PECL_VERSION="apcu-5.1.7"
-        - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
         - REDIS_PECL_VERSION="redis-4.0.0"
         - TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL=true
     - php: 7.1
@@ -89,28 +85,24 @@ matrix:
         - BENCHMARKS=true
         - TEST_COVERAGE=true
         - APCU_PECL_VERSION="apcu"
-        - APCU_BC_PECL_VERSION="apcu_bc"
         - REDIS_PECL_VERSION="redis"
         - TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL=true
     - php: 7.2
       env:
         - DEPS=lowest
         - APCU_PECL_VERSION="apcu-5.1.10"
-        - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
         - REDIS_PECL_VERSION="redis-4.0.0"
         - TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL=true
     - php: 7.2
       env:
         - DEPS=latest
         - APCU_PECL_VERSION="apcu"
-        - APCU_BC_PECL_VERSION="apcu_bc"
         - REDIS_PECL_VERSION="redis"
         - TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL=true
     - php: 7.3
       env:
         - DEPS=lowest
         - APCU_PECL_VERSION="apcu-5.1.10"
-        - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
         - MEMCACHED_PECL_VERSION="memcached-3.1.2"
         - REDIS_PECL_VERSION="redis-4.0.0"
         - TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL=true
@@ -118,7 +110,6 @@ matrix:
       env:
         - DEPS=latest
         - APCU_PECL_VERSION="apcu"
-        - APCU_BC_PECL_VERSION="apcu_bc"
         - MEMCACHED_PECL_VERSION="memcached"
         - REDIS_PECL_VERSION="redis"
         - TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL=true
@@ -134,11 +125,6 @@ install:
         sed -i 's/extension="apcu.so"//' ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ;
     fi ;
 
-  - if [[ $APCU_BC_PECL_VERSION != '' ]]; then
-        pecl install -f $APCU_BC_PECL_VERSION ;
-        sed -i 's/extension="apc.so"//' ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ;
-    fi ;
-
   - if [[ $TESTS_LAMINAS_CACHE_XCACHE_ENABLED == 'true' ]]; then
         git clone https://github.com/lighttpd/xcache.git
         && (
@@ -148,10 +134,8 @@ install:
         );
     fi ;
 
-  - if [[ $APCU_PECL_VERSION != '' && $APCU_BC_PECL_VERSION == '' ]]; then
+  - if [[ $APCU_PECL_VERSION != '' ]]; then
         phpenv config-add .ci/apcu.ini ;
-    elif [[ $APCU_BC_PECL_VERSION != '' ]]; then
-        phpenv config-add .ci/apcu_bc.ini ;
     fi ;
 
   - if [[ $TESTS_LAMINAS_CACHE_REDIS_ENABLED == 'true' ]]; then
