--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "require": {
         "php": "^5.6 || ^7.0",
-        "laminas/laminas-cache-storage-adapter-apc": "^1.0@dev",
+        "laminas/laminas-cache-storage-adapter-apc": "1.0.0@dev || ^1.0",
         "laminas/laminas-eventmanager": "^2.6.3 || ^3.2",
         "laminas/laminas-servicemanager": "^2.7.8 || ^3.3",
         "laminas/laminas-stdlib": "^3.2.1",
