Updates MkDocs config to add installation options
Signed-off-by: Frank Brückner <dev@froschdesignstudio.de>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,3 +22,6 @@ site_description: 'Caching implementation with a variety of storage options, as 
 repo_url: 'https://github.com/laminas/laminas-cache'
 extra:
     project: Components
+    installation:
+        config_provider_class: 'Laminas\Cache\ConfigProvider'
+        module_class: 'Laminas\Cache\Module'
