qa: fix phpbench
Signed-off-by: Maximilian Bösing <2189546+boesing@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,7 @@
         "cache/integration-tests": "^0.16",
         "laminas/laminas-coding-standard": "^2.1",
         "laminas/laminas-serializer": "^2.6",
-        "phpbench/phpbench": "^0.17.1",
+        "phpbench/phpbench": "^1.0.0-beta2",
         "phpunit/phpunit": "^9.4",
         "psalm/plugin-phpunit": "^0.15.1",
         "vimeo/psalm": "^4.5"
