feat: configuration deprecation check command
Providing a deprecation check command for upstream projects. Deprecated configurations can be fixed before upgrading to the next major version.

Signed-off-by: Maximilian Bösing <2189546+boesing@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,9 @@
         "psalm/plugin-phpunit": "^0.15.1",
         "vimeo/psalm": "^4.5.2"
     },
+    "conflict": {
+        "symfony/console": "<5.1"
+    },
     "provide": {
         "psr/cache-implementation": "1.0",
         "psr/simple-cache-implementation": "1.0"
